🎨 Updated index.html & SCSS File

--- a/index.html
+++ b/index.html
@@ -17,15 +17,17 @@
 </head>
 <body class="bg-accent-1">
 
+  <main>
+
     <picture>
       <source class="bg__pattern" srcset="./assets/img/pattern-background-desktop.svg" media="(min-width: 600px)">
       <img class="bg-pattern" src="./assets/img/pattern-background-mobile.svg" alt="">
     </picture>
     
-    <div class="card bg-neutral-200 br-large">
+    <div class="card bg-neutral-100 br-large">
       <img class="card__img" src="./assets/img/illustration-hero.svg" alt="">
 
-      <div class="card__details padding-32 text-align-center grid-column">
+      <div class="card__details padding-48 text-align-center grid-column">
         <h1 class="card__title">Order Summary</h1>
         <p>You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!</p>
 
@@ -42,6 +44,8 @@
         <button type="submit" href="" class="btn btn--secondary">Cancel Order</button>
       </div>
     </div>
+
+  </main>
 
   <footer class="footer text-align-center">
     Challenge by <a class="footer__link text-neutral-400" href="https://www.frontendmentor.io/challenges/order-summary-component-QlPmajDUj/hub" target="blank">Frontend Mentor</a>. Coded by <a class="footer__link" href="https://github.com/devhnry">devnhry</a>.
