🎨 Updated index.html & SCSS File

--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
               <h2 class="fs-16">Annual Plan</h2>
               <p>$59.99/year</p>
             </div>
-            <button class="btn btn--link push-right" href="">Change</button>
+            <button class="btn btn--link push-right">Change</button>
         </div>
     
-        <button type="submit" href="" class="btn btn--primary">Proceed to Payment</button>
-        <button type="submit" href="" class="btn btn--secondary">Cancel Order</button>
+        <button type="submit" class="btn btn--primary">Proceed to Payment</button>
+        <button type="submit" class="btn btn--secondary">Cancel Order</button>
       </div>
     </div>
 
